syntax = "proto3";

package classroom_system.control;

option java_multiple_files = false;
option java_package = "com.classroomsystem";
option java_outer_classname = "AirConditionProto";

service AirConditionerControlService {
  rpc SwitchAirConditioner(SwitchAirConditionerRequest) returns (SwitchAirConditionerResponse);
  rpc SetTemperature(SetTemperatureRequest) returns (SetTemperatureResponse);

  //Server Streaming
  rpc StreamTemperatureAdjustments(stream SetTemperatureRequest) returns (StreamTemperatureAdjustmentsResponse) {
  }
}

message SwitchAirConditionerRequest {
  bool turn_on = 1;
}

message SwitchAirConditionerResponse {
  bool success = 1;
  string message = 2;
}

//Requested set temperature value
message SetTemperatureRequest {
  float temperature_celsius = 1;
}

message SetTemperatureResponse {
  bool success = 1;
  string message = 2;
}

message StreamTemperatureAdjustmentsResponse {
  bool success = 1;
  string message = 2;
}

