syntax = "proto3";

package classroom_system.control;

option java_multiple_files = false;
option java_package = "com.classroomsystem";
option java_outer_classname = "LightProto";

service LightControlService {
  rpc SwitchLight(SwitchLightRequest) returns (SwitchLightResponse);
  rpc AdjustBrightness(BrightnessRequest) returns (BrightnessResponse);
  rpc StreamLightControl(stream LightControlMessage) returns (stream LightControlMessage) {

  }
}

// switch
message SwitchLightRequest {
  bool turn_on = 1;
}

message SwitchLightResponse {
  bool success = 1;
  string message = 2;
}

// Brightness
message BrightnessRequest {
  enum BrightnessLevel {
    LOW = 0;
    HIGH = 1;
  }
  BrightnessLevel level = 1;
}

message BrightnessResponse {
  bool success = 1;
  string message = 2;
}

// Light control
message LightControlMessage {
  oneof control_type {
    SwitchLightRequest switch_request = 1;
    BrightnessRequest brightness_request = 2;
  }
  string message = 3;
}
